fixed the footer of the mobile version of the site. it now covers the page as desired.

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -204,7 +204,6 @@ body {
     /* Resize body content */
     body {
         font-size: unset; /* Reduce font size for smaller screens */
-        padding: 10px; /* Add padding for better spacing */
 	padding-top: 30px;
     }
 
